# daimler-dot-prediction

./: inference.ipynb  main.py  pyproject.toml
src/: data_prep.py  model.py  paths.py  train.py
