[project]
name = "daimler-dot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel<7.0.0",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.5.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
